Refactor ClubsController to return ResponseGenericDTO for club members retrieval
Update ClubMemberService to return ResponseGenericDTO for members by club ID and handle empty member lists

Implement unit tests for AmbitService, AuthService, CategoryService, ClubMemberService, and ClubsService with comprehensive coverage

Enhance error handling in ClubMemberService for non-existent clubs and members

Add functionality to ClubsService for creating clubs with members and updating club details